objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the joint owner.</description>
        <label>Total Nonfinancial Assets Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the primary owner.</description>
        <label>Total Nonfinancial Assets Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssets__c</fullName>
        <description>Value of all physical assets such as collectibles or precious metals.</description>
        <formula>FinServ__TotalNonfinancialAssetsPrimaryOwner__c + FinServ__TotalNonfinancialAssetsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nonfinancial Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsJointOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a joint owner.</description>
        <label>Number of Fin. Accounts - Joint Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a primary owner.</description>
        <label>Number of Fin. Accounts - Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
        <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Financial Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
        <label>Total Outstanding Credit - Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditPrimaryOwner__c</fullName>
        <label>Total Outstanding Credit - Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCredit__c</fullName>
        <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalPremium__c</fullName>
        <description>Total Premium field for Insurance</description>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__WalletShare__c</fullName>
        <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FlowCustom__c</fullName>
        <label>FlowCustom</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middlename__c</fullName>
        <description>add the middle name</description>
        <label>Middlename</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewAccField__c</fullName>
        <label>NewAccField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCustom1__c</fullName>
        <label>NewCustom1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCustom__c</fullName>
        <label>NewCustom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field_test__c</fullName>
        <label>New Field test</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOPS__c</fullName>
        <label>OOPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Field2_c__c</fullName>
        <label>test Field 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <description>Test_Field__c</description>
        <label>Test Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Text__c</fullName>
        <label>Test Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_picklist__c</fullName>
        <label>Test picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test Value1</fullName>
                </value>
                <value>
                    <fullName>Test Value2</fullName>
                </value>
                <value>
                    <fullName>Test Value3</fullName>
                </value>
                <value>
                    <fullName>Test Value4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_the_back_promotion_2__c</fullName>
        <label>Test the back promotion 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_the_back_promotion__c</fullName>
        <label>Test the back promotion</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountserialno__c</fullName>
        <label>accountserialno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>checktopic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checktopic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>coreected_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>coreected list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_of_birth__c</fullName>
        <description>enter date of birth</description>
        <label>date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateamount__c</fullName>
        <label>dateamount</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>label1__c</fullName>
        <label>label1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>listofaccounts__c</fullName>
        <label>listofaccounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>account name</fullName>
                </value>
                <value>
                    <fullName>accountno</fullName>
                </value>
                <value>
                    <fullName>personal account</fullName>
                </value>
                <value>
                    <fullName>bank details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>newTest__c</fullName>
        <description>testAddMetadataField</description>
        <label>newTest</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shell__c</fullName>
        <label>shell</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>test_Back_4__c</fullName>
        <label>test Back 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_QG__c</fullName>
        <label>test QG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
                <value>
                    <fullName>test1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testnum__c</fullName>
        <label>testnum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Businesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesBusiness</value>
        </filters>
        <label>My Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Clients</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>My Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Groups</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesHousehold</value>
        </filters>
        <filters>
            <field>FinServ__IndividualType__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <label>My Groups</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Institutions</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesInstitution</value>
        </filters>
        <label>My Institutions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FinServ__My_Retail_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FinServ__ClientCategory__c</columns>
        <columns>FinServ__TotalFinancialAccounts__c</columns>
        <columns>FinServ__AUM__c</columns>
        <columns>FinServ__WalletShare__c</columns>
        <columns>FinServ__LastInteraction__c</columns>
        <columns>FinServ__NextInteraction__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FinServ__IndustriesIndividual</value>
        </filters>
        <label>My Retail Clients</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesBusiness</fullName>
        <active>true</active>
        <description>A business or an organization</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesHousehold</fullName>
        <active>true</active>
        <description>A grouping of related people and institutions</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesIndividual</fullName>
        <active>true</active>
        <description>A person who is a prospect or a client</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__IndustriesInstitution</fullName>
        <active>true</active>
        <description>An institution that is a prospect or a client</description>
        <label>Institution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FinServ__NonPortalUserReferrer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                NOT(ISBLANK(FinServ__ReferredByUser__c)),
                NOT(ISPICKVAL(FinServ__ReferredByUser__r.UserType, &apos;Standard&apos;))
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByUser__c</errorDisplayField>
        <errorMessage>Internal referrers must be internal Salesforce users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__SingleReferredByEntryByRecord</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
                ISBLANK(FinServ__ConversionDateTime__c),
                AND(
                    NOT(ISBLANK(FinServ__ReferredByUser__c)),
                    NOT(ISBLANK(FinServ__ReferredByContact__c))
                )
            )</errorConditionFormula>
        <errorDisplayField>FinServ__ReferredByContact__c</errorDisplayField>
        <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
    </validationRules>
</CustomObject>